# mcp-modules-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  coolify-deploy.sh  coolify-docker-compose.yml  coolify-homelab-setup.md  docker-compose.homelab.yml  docker-compose.yml  homelab-setup.sh  quick-start.sh  raspberry-pi-cluster.md
.github/workflows/: ci.yml
config/: haproxy.cfg
configs/: cursor-mcp-config.json  cursor-mcp-remote.json
deployment/: Dockerfile
docs/: ARCHITECTURE.md  CURSOR_SETUP.md  DEPLOYMENT_AND_TESTING.md  DEPLOYMENT_SUMMARY.md  FINAL_ASSESSMENT.md  GETTING_STARTED.md  MODULE_GUIDE.md  PERFORMANCE_GUIDE.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_UPDATE.md  REPOSITORY_STRUCTURE.md  SECURITY.md  SETUP_COMPLETE.md
examples/: README.md  basic_usage.rs  office_automation.rs  simple_client.rs
monitoring/: prometheus-homelab.yml  prometheus.yml
scripts/: build-clean.sh  mcp-stdio-bridge-remote.js  mcp-stdio-bridge.js  setup-cursor-mcp.sh  start-mcp-server.sh  test-local.sh
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  server.rs
src/ai/: mod.rs
src/ai/llm_responses/: mod.rs
src/analytics/: mod.rs
src/analytics/superset/: mod.rs
src/auth/: mod.rs
src/auth/oauth/: mod.rs
src/cicd/: mod.rs
src/cloud/: aws.rs  gcp.rs  mod.rs
src/cloud/azure/: mod.rs
src/collaboration/: mod.rs
src/creation/: mod.rs
src/creation/server/: mod.rs
src/creation/templates/: mod.rs
src/database/: mod.rs  mongodb.rs  postgresql.rs  supabase.rs
src/development/: mod.rs
src/development/flutter/: mod.rs
src/finance/: mod.rs
src/finance/alpaca/: mod.rs
src/gaming/: mod.rs
src/gaming/steam/: mod.rs
src/government/: mod.rs
src/government/grants/: mod.rs
src/homelab/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/cloudflare/: mod.rs
src/infrastructure/docker/: mod.rs
src/infrastructure/kubernetes/: mod.rs
src/lifecycle/: mod.rs
src/maps/: mod.rs
src/maps/osm/: mod.rs
src/memory/: mod.rs  persistence.rs
src/monitoring/: mod.rs
src/office/: mod.rs
src/office/excel/: mod.rs
src/office/powerpoint/: mod.rs
src/office/word/: mod.rs
src/research/: mod.rs
src/research/deep_research/: mod.rs
src/security/: mod.rs
src/smart_home/: mod.rs
src/smart_home/home_assistant/: entity.rs  mod.rs  service.rs  test.rs
src/tools/: mod.rs
src/transport/: http.rs  jsonrpc.rs  mock.rs  mod.rs  stdio.rs  websocket.rs
src/web/: mod.rs
tests/: integration_test.rs
