[package]
name = "devops-mcp"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Rust SDK for the Model Context Protocol (MCP) designed specifically for DevOps architects in tech consulting"
authors = ["DevOps Architect Team"]
license = "MIT"
repository = "https://github.com/devops-architect/devops-architect-mcp"
readme = "README.md"
keywords = ["devops", "mcp", "sdk", "api", "cloud"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
url = "2.5"
base64 = "0.21"
log = "0.4"
futures = "0.3"
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
oauth2 = "4.4"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.5"
